# classroom-cli

./: .gitignore  README.MD  README.md  pyproject.toml
src/gclass/: auth.py  cli.py  config.py  services.py
src/gclass.egg-info/: PKG-INFO  SOURCES.txt
src/gclass_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
